--- a/learn-jpa-and-hibernate/src/main/resources/application.properties
+++ b/learn-jpa-and-hibernate/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=learn-jpa-and-hibernate
 
 spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:h2:mem:testdb
