logging and ModelMap for RequestParams

--- a/myfirstwebapp/src/main/resources/application.properties
+++ b/myfirstwebapp/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=myfirstwebapp
 spring.mvc.view.prefix=WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
-
+loggin.level.com.example.in28mins.myfirstwebapp=info
 #logging.level.org.springframework=debug
