--- a/myfirstwebapp/src/main/resources/application.properties
+++ b/myfirstwebapp/src/main/resources/application.properties
@@ -2,4 +2,10 @@ spring.application.name=myfirstwebapp
 spring.mvc.view.prefix=WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 loggin.level.com.example.in28mins.myfirstwebapp=info
-#logging.level.org.springframework=debug
+
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=id
+spring.datasource.password=pass
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
